fix lỗi